fixed overflow on table

--- a/client/src/components/Card/style.css
+++ b/client/src/components/Card/style.css
@@ -4,4 +4,5 @@
     border-radius: 5px;
     margin-bottom: 20px;
     box-shadow: 5px 5px 10px rgba(000, 000, 000, 0.03);
+    overflow: auto;
 }
